--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,7 @@
 // Variables
 @import 'variables';
+@import 'header';
+@import 'experience';
 
 // Bootstrap
 @import '~admin-lte/build/scss/adminlte';
