--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,7 +1,9 @@
 // Variables
+@import 'navbar';
 @import 'variables';
 @import 'header';
 @import 'experience';
+@import 'portofolio';
 
 // Bootstrap
 @import '~admin-lte/build/scss/adminlte';
