--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -3,27 +3,58 @@
 
     .my-photo {
         box-shadow: none;
-        overflow: hidden;        
-     }
+        overflow: hidden;
+    }
 
-     .my-name {
-        font-family: $font-family-montserrat;
-        font-size: 100px;
-        line-height: 95px;
+    .my-name {
+        font-family: $font-family-sora;
+        font-size: 48px;
         color: $black-primary;
-
-        strong {
-            border-bottom: 3px solid #ff214f;
-        }
-     }
-
-     .caption {
-        font-family: $font-family-montserrat;
-        margin-top: 40px;
-        letter-spacing: 2px;
-        color: #939393;
-        font-size: 30px;
-        line-height: 20px;
+        text-align: left;
+        margin-left: 40px;
         font-weight: bold;
+    }
+
+    .job {
+        font-family: $font-family-montserrat;
+        margin-top: 10px;
+        letter-spacing: 2px;
+        color: #000;
+        font-size: 24px;
+        line-height: 20px;
+        text-align: left;
+        margin-left: 40px;
+    }
+
+    .deskripsi {
+        font-family: $font-family-montserrat;
+        margin-top: 10px;
+        letter-spacing: 2px;
+        color: #000;
+        font-size: 14px;
+        line-height: 20px;
+        text-align: left;
+        max-width : 70%;
+        margin-left: 40px;
+        margin-bottom: 20px;
+    }
+
+    .btn-cv {
+        background-color: $chocolate-primary;
+        color: #fff;
+        border: hidden;
+        border-radius: 8px;
+        margin-left: 40px;
+        height: 45px;
+        padding: 0 10;
+    
+        &:hover {
+            background-color: #CFB593;
+            color: #fff;
+        }
+    }
+    .social-media {
+        margin-left: 40px;
+        margin-top: 20px;
     }
 }
