--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,8 @@
 @import 'header';
 @import 'experience';
 @import 'portofolio';
+@import 'aboutme';
+
 
 // Bootstrap
 @import '~admin-lte/build/scss/adminlte';
