--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -1,3 +1,6 @@
+.masthead{
+    background-color: #F7F7F7;
+}
 .row-title {
     min-height: 650px;
 
@@ -13,6 +16,7 @@
         text-align: left;
         margin-left: 40px;
         font-weight: bold;
+        margin-top: 100px;
     }
 
     .job {
