--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,11 @@
   color: #fff;
 }
 
+.nav-link.active {
+  color: white !important;
+  background-color: black;
+}
+
 html, body {
   max-width: 100%;
   overflow-x: hidden;
